--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,22 @@
 @tailwind utilities;
 @import "~leaflet/dist/leaflet.css";
 
+
+/* Add this CSS for the pulsing effect */
+@keyframes pulse {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+}
+
+.animate-pulse-menu {
+  animation: pulse 1.5s ease-in-out infinite;
+}
+
+
 body{
   font-family:var(--poppins);
 }
